testdata/baselines/reference/submodule/conformance/nodeModulesImportAttributesTypeModeDeclarationEmit(module=node18).errors.txt
/index.ts(6,14): error TS2742: The inferred type of 'b' cannot be named without a reference to './node_modules/pkg/import'. This is likely not portable. A type annotation is necessary.


==== /index.ts (1 errors) ====
    export type LocalInterface =
        & import("pkg", { with: {"resolution-mode": "require"} }).RequireInterface
        & import("pkg", { with: {"resolution-mode": "import"} }).ImportInterface;
    
    export const a = (null as any as import("pkg", { with: {"resolution-mode": "require"} }).RequireInterface);
    export const b = (null as any as import("pkg", { with: {"resolution-mode": "import"} }).ImportInterface);
                 ~
!!! error TS2742: The inferred type of 'b' cannot be named without a reference to './node_modules/pkg/import'. This is likely not portable. A type annotation is necessary.
    
==== /node_modules/pkg/package.json (0 errors) ====
    {
        "name": "pkg",
        "version": "0.0.1",
        "exports": {
            "import": "./import.js",
            "require": "./require.js"
        }
    }
==== /node_modules/pkg/import.d.ts (0 errors) ====
    export interface ImportInterface {}
==== /node_modules/pkg/require.d.ts (0 errors) ====
    export interface RequireInterface {}